@@ -13,8 +13,8 @@ import org.rent.room.be.entity.User;
 import org.rent.room.be.mapper.ChatMapper;
 import org.rent.room.be.repository.ConversationRepository;
 import org.rent.room.be.repository.MessageRepository;
-import org.rent.room.be.repository.UserRepository;
 import org.rent.room.be.service.ChatService;
+import org.rent.room.be.service.UserService;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 
@@ -29,32 +29,38 @@ public class ChatServiceImpl implements ChatService {
     private final SimpMessagingTemplate messagingTemplate;
     private final MessageRepository messageRepository;
     private final ConversationRepository conversationRepository;
-    private final UserRepository userRepository;
     private final ChatMapper chatMapper;
+    private final UserService userService;
 
     @Transactional
     @Override
-    public MessageResponse saveMessage(MessageRequest request) {
-        User sender = userRepository.findById(request.getSenderId()).orElseThrow(() -> new RuntimeException("Người gửi không tồn tại"));
-        User recipient = userRepository.findById(request.getRecipientId()).orElseThrow(() -> new RuntimeException("Người nhận không tồn tại"));
+    public void saveMessage(MessageRequest request, String currentUserIdStr) {
 
-        Conversation conversation;
+        UUID currentUserId = UUID.fromString(currentUserIdStr);
 
-        if (request.getConversationId() != null) {
-            conversation = conversationRepository.findById(request.getConversationId())
-                    .orElseThrow(() -> new RuntimeException("Cuộc hội thoại không tồn tại"));
+        if (currentUserId.equals(request.getRecipientId())) {
+            throw new RuntimeException("Cannot send message to yourself");
         }
-        else {
-            conversation = conversationRepository
-                    .findBetweenUsers(sender.getUserId(), recipient.getUserId())
-                    .orElseGet(() -> conversationRepository.save(
-                            Conversation.builder()
-                                    .user1(sender)
-                                    .user2(recipient)
-                                    .conversationTitle(sender.getUserName() + " & " + recipient.getUserName())
-                                    .build()
-                    ));
-        }
+
+        User sender = userService.findByUserId(currentUserId);
+
+        User recipient = userService.findByUserId(request.getRecipientId());
+
+        // Tìm hoặc tạo Conversation (Quy tắc: User có ID nhỏ hơn luôn là User1)
+        Conversation conversation = conversationRepository
+                .findBetweenUsers(sender.getUserId(), recipient.getUserId())
+                .orElseGet(() -> {
+                    boolean senderIsUser1 = sender.getUserId().compareTo(recipient.getUserId()) < 0;
+                    return Conversation.builder()
+                            .user1(senderIsUser1 ? sender : recipient)
+                            .user2(senderIsUser1 ? recipient : sender)
+                            .conversationTitle(sender.getUserName() + " & " + recipient.getUserName())
+                            .createdAt(LocalDateTime.now())
+                            .build();
+                });
+
+        conversation.setUpdatedAt(LocalDateTime.now());
+        conversationRepository.save(conversation);
 
         Message newMessage = Message.builder()
                 .messageBody(request.getContent())
@@ -66,18 +72,22 @@ public class ChatServiceImpl implements ChatService {
                 .build();
 
         Message saved = messageRepository.save(newMessage);
+        MessageResponse response = chatMapper.toMessageResponse(saved);
 
-        // Đừng quên cập nhật updatedAt của Conversation để danh sách chat nhảy lên đầu
-        conversation.setUpdatedAt(LocalDateTime.now());
-        conversationRepository.save(conversation);
+        // --- GỬI REAL-TIME ---
+        // Gửi cho người nhận
+        messagingTemplate.convertAndSendToUser(
+                recipient.getUserId().toString(),
+                "/queue/messages",
+                response
+        );
 
-        return MessageResponse.builder()
-                .messageId(saved.getMessageId())
-                .content(saved.getMessageBody())
-                .senderName(sender.getUserName())
-                .conversationId(conversation.getConversationId())
-                .createdAt(saved.getCreatedAt())
-                .build();
+        // Gửi cho chính người gửi để đồng bộ các tab hoặc thiết bị khác
+        messagingTemplate.convertAndSendToUser(
+                sender.getUserId().toString(),
+                "/queue/messages",
+                response
+        );
     }
 
     @Override
@@ -91,23 +101,13 @@ public class ChatServiceImpl implements ChatService {
 
     @Override
     public List<MessageResponse> getMessagesByConversation(UUID conversationId) {
-        // 1. Kiểm tra xem cuộc hội thoại có tồn tại không (Optional)
         if (!conversationRepository.existsById(conversationId)) {
             throw new RuntimeException("Conversation not found");
         }
 
-        // 2. Lấy danh sách tin nhắn từ Repository, sắp xếp theo thời gian tăng dần (cũ đến mới)
         return messageRepository.findByConversationConversationIdOrderByCreatedAtAsc(conversationId)
                 .stream()
-                .map(msg -> MessageResponse.builder()
-                        .messageId(msg.getMessageId())
-                        .conversationId(msg.getConversation().getConversationId())
-                        .content(msg.getMessageBody())
-                        .senderName(msg.getSender().getUserName())
-                        .senderId(msg.getSender().getUserId())
-                        .createdAt(msg.getCreatedAt())
-                        .status(msg.getStatus())
-                        .build())
+                .map(chatMapper::toMessageResponse) // Dùng mapper cho thống nhất
                 .toList();
     }
 
@@ -115,18 +115,14 @@ public class ChatServiceImpl implements ChatService {
     public ConversationResponse getConversationById(UUID conversationId) {
         Conversation conv = conversationRepository.findById(conversationId)
                 .orElseThrow(() -> new RuntimeException("Phòng chat không tồn tại"));
-
         return chatMapper.toConversationResponse(conv);
     }
 
     @Transactional
+    @Override
     public void markAllMessagesInConversationAsRead(UUID conversationId, UUID userId) {
-        System.out.println("DEBUG: Bat dau danh dau da doc cho conversation: " + conversationId);
-
         List<Message> unreadMessages = messageRepository
                 .findByConversation_ConversationIdAndRecipient_UserIdAndStatusNot(conversationId, userId, MessageStatus.READ);
-
-        System.out.println("DEBUG: So luong tin nhan chua doc tim thay: " + unreadMessages.size());
 
         if (unreadMessages.isEmpty()) return;
 
@@ -136,17 +132,12 @@ public class ChatServiceImpl implements ChatService {
         });
         messageRepository.saveAll(unreadMessages);
 
-        // FIX: Lay senderId tu tin nhan dau tien de thong bao cho ho
-        UUID senderId = unreadMessages.get(0).getSender().getUserId();
-
-        System.out.println("DEBUG: Dang gui ReadReceipt toi User (Sender): " + senderId);
-
+        // Thông báo cho người gửi rằng tin nhắn của họ đã được đọc
+        UUID originalSenderId = unreadMessages.getFirst().getSender().getUserId();
         messagingTemplate.convertAndSendToUser(
-                senderId.toString(),
+                originalSenderId.toString(),
                 "/queue/read-receipt",
                 new ReadReceiptResponse(conversationId, userId)
         );
-
-        System.out.println("DEBUG: Da gui tin hieu WebSocket thanh cong");
     }
 }
